Revision history for MooseX-UndefTolerant

{{$NEXT}}

0.17      2012-05-03 14:43:42 PDT-0700
    * re-release to fix dependency issue *again*! :)

0.16      2012-05-02 15:13:01 PDT-0700
    * remove temporary dep, and increase the required version of
      Dist::Zilla::Plugin::Test::CheckDeps, that now injects this dependency
      automatically

0.15      2012-05-02 12:56:59 PDT-0700
    * temporarily add missing dep on Test::CheckDeps

0.14      2012-05-02 09:23:54 PDT-0700
    * re-release of 0.13 to fix a PAUSE indexing issue.

0.13    2012-03-25
    * unit test improvements - tighter TODO scopes, better diagnostics on
      failure, Test::Moose for cleaner logic
    * fix documentation referencing Moose changes that are still TBD
    * undef attr values being stripped at construction time are now removed
      from visibility of all attr initializations, not just the one being
      updated at the time
    * fixed case where an attribute on an immutable class was being stripped
      of its undef value at construction time even if its type constraint
      already can tolerate undef.

0.12    2011-04-03
    * This module can now be used in roles with Moose 1.9900+. (Jesse Luehrs)

0.11    2011-03-19
    * re-release to fix careless syntax error (whoops!) :)

0.10    2011-03-18
    * No longer apply UndefTolerant behaviour to attributes with a type
      constraint that handles undef (or those with no type constraint at all).
      (Karen Etheridge)

0.09    2011-03-02
    * Add missing test prereq on Test::Fatal. (Dave Rolsky)

0.08    2011-02-27
    * Additional (TODO) unit tests for immutable classes, and documentation
      notes about these limitations. (Karen Etheridge)

    * Added forward compatibility with Moose 1.9900+, but this module still
      works with older Moose too. (Dave Rolsky)

0.07    2010-10-21
    * Don't do extra work by exists-ing before defined-ing (Chip Salzenberg)

0.06    2010-10-11