@@ -1,6 +1,8 @@
 Revision history for MooseX-UndefTolerant
 
 {{$NEXT}}
+   * avoid undef warning by not attempting to manipulate constructor data for
+     init_arg => undef attributes (thanks Damon Tkoch for the report!)
 
 0.17      2012-05-03 14:43:42 PDT-0700
     * re-release to fix dependency issue *again*! :)
